RAG_recursively answering

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 66,
    "id": "07224099",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 67,
    "id": "65029e8a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 68,
    "id": "f53f226c",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "id": "f71841bc",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "id": "b736680c",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['ids', 'embeddings', 'documents', 'uris', 'included', 'data', 'metadatas'])\n",
-      "ID: beef1b17-0aae-4402-849d-f624debc1eee\n",
+      "ID: 910181a3-dee0-44c8-af8f-d3b934ecc9bb\n",
       "Text: LLM Powered Autonomous Agents\n",
       "    \n",
       "Date: June 23, 2023  |  Estimated Reading Time: 31 min  |  Author: Lilian Weng\n",
@@ -83,25 +83,25 @@
       "Building agents with LLM (large language model) as its core controller is a cool con\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: 33227605-ec9c-4783-b6f9-8a6f7199f8d5\n",
+      "ID: dc146721-f5f7-418e-82d7-83f8601ea8ff\n",
       "Text: Memory\n",
       "\n",
       "Short-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\n",
       "Long-term memory: This provides the agent with th\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: b79bf339-9e4e-452a-aa5a-49c286d7c7a9\n",
+      "ID: b767d5e0-ca36-42b0-9fe5-535ba6928c0e\n",
       "Text: Component One: Planning#\n",
       "A complicated task usually involves many steps. An agent needs to know what they are and plan ahead.\n",
       "Task Decomposition#\n",
       "Chain of thought (CoT; Wei et al. 2022) has become a s\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: b45340cc-017f-4f10-98de-2c1031091207\n",
+      "ID: 3ca9502c-2cbc-4d1b-894f-b8bbc8059499\n",
       "Text: Task decomposition can be done (1) by LLM with simple prompting like \"Steps for XYZ.\\n1.\", \"What are the subgoals for achieving XYZ?\", (2) by using task-specific instructions; e.g. \"Write a story outl\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: e4f944c6-42d4-4886-a32e-6a1e1f32d86c\n",
+      "ID: 8adf90ce-36f7-41a2-a2a8-5bf9d166bdda\n",
       "Text: Self-Reflection#\n",
       "Self-reflection is a vital aspect that allows autonomous agents to improve iteratively by refining past action decisions and correcting previous mistakes. It plays a crucial role in r\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
@@ -122,17 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "id": "d96de6a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "189"
+       "126"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 72,
    "id": "6e4d1167",
    "metadata": {},
    "outputs": [
@@ -165,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 73,
    "id": "1c586aa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task decomposition is the process of breaking down a complex task into smaller and simpler steps to make it more manageable and easier to accomplish. This can be done through techniques like Chain of Thought (CoT) or Tree of Thoughts, which help in organizing and structuring the steps needed to complete a task.'"
+       "\"Task decomposition is a technique used to break down complex tasks into smaller and simpler steps, making them more manageable. It involves transforming big tasks into multiple manageable tasks and shedding light on the model's thinking process. This can be done through prompting techniques like Chain of Thought (CoT) or Tree of Thoughts, as well as using task-specific instructions or relying on external classical planners.\""
       ]
      },
-     "execution_count": 75,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 74,
    "id": "e75c9966",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 75,
    "id": "4b7a5a84",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "18"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,19 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "fe3f3dcd",
    "metadata": {},
    "outputs": [],
    "source": [
     "embd = OpenAIEmbeddings()\n",
     "query_result = embd.embed_query(question) \n",
-    "document_result = embd.embed_documents(document)"
+    "document_result = embd.embed_documents([document])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 77,
    "id": "09b17c7f",
    "metadata": {},
    "outputs": [],
@@ -257,17 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 78,
    "id": "63e59883",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.9074268061127665)"
+       "np.float64(0.9074394698045489)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 79,
    "id": "7d507ce6",
    "metadata": {},
    "outputs": [],
@@ -295,17 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 80,
    "id": "20e1d8f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task decomposition in the context of LLM-powered autonomous agents refers to breaking down large tasks into smaller, more manageable subgoals. This process enables the agent to efficiently handle complex tasks by dividing them into simpler steps. Task decomposition can be achieved through various methods, such as using simple prompting for LLM, task-specific instructions, or human inputs. Additionally, techniques like Chain of Thought and Tree of Thoughts are used to enhance model performance on complex tasks by decomposing them into multiple manageable steps.'"
+       "'Task decomposition in a LLM-powered autonomous agent system involves breaking down complex tasks into smaller, more manageable subgoals. This process enables the agent to efficiently handle intricate tasks by dividing them into simpler steps. Task decomposition can be achieved through various methods such as prompting the LLM with specific instructions, using task-specific prompts, or incorporating human inputs. Additionally, external classical planners can be utilized for long-horizon planning, where the LLM translates the problem into a planning domain definition language, requests a classical planner to generate a plan, and then translates the plan back into natural language. This approach outsources the planning step to an external tool, which is common in certain robotic setups.'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,17 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 81,
    "id": "65b27a9d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Task decomposition is a technique used by agents to break down complex tasks into smaller and simpler steps. This process involves transforming big tasks into multiple manageable tasks, allowing the agent to plan ahead and interpret the model's thinking process. Techniques like Chain of Thought (CoT) and Tree of Thoughts extend task decomposition by exploring multiple reasoning possibilities at each step and generating multiple thoughts per step, creating a tree structure.\""
+       "'Task decomposition is a technique used by agents to break down complex tasks into smaller and simpler steps. This process allows the agent to better plan and execute the task by dividing it into more manageable components. Techniques like Chain of Thought and Tree of Thoughts are examples of methods that help in task decomposition by breaking down big tasks into multiple smaller tasks or exploring multiple reasoning possibilities at each step.'"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,14 +344,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63f2a142",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "36efea2e",
    "metadata": {},
@@ -361,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 82,
    "id": "110104ed",
    "metadata": {},
    "outputs": [],
@@ -399,17 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 83,
    "id": "65fdd89d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task decomposition for LLM agents involves breaking down complex tasks into smaller and simpler steps using techniques such as Chain of Thought (CoT) or Tree of Thoughts. It can be done through simple prompting, task-specific instructions, or with the help of an external classical planner in the LLM+P approach.'"
+       "'Task decomposition for LLM agents involves breaking down complex tasks into smaller and simpler steps using techniques such as Chain of Thought (CoT) and Tree of Thoughts. This process helps the agent to utilize more test-time computation and enhance model performance on complex tasks by transforming big tasks into multiple manageable tasks. Additionally, task decomposition for LLM agents can also be achieved through simple prompting, task-specific instructions, or by relying on an external classical planner for long-horizon planning.'"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,12 +427,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8a549d1",
+   "metadata": {},
+   "source": [
+    "RAG Fusion"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "cf8d5dea",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Task decomposition for LLM agents involves breaking down complex tasks into smaller and simpler steps using techniques such as prompting, task-specific instructions, and human inputs. Additionally, there is an approach called LLM+P that involves outsourcing the planning step to an external classical planner, which utilizes the Planning Domain Definition Language (PDDL) to describe the planning problem and generate a plan that is then translated back into natural language.'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template = \"\"\"You are a helpful assistant that generates multiple search queries based on a single input query. \\n\n",
+    "Generate multiple search queries related to: {question} \\n\n",
+    "Output (4 queries):\"\"\"\n",
+    "prompt_rag_fusion = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "generate_queries = (\n",
+    "    prompt_rag_fusion\n",
+    "    |ChatOpenAI(model = 'gpt-3.5-turbo',temperature=0)\n",
+    "    |StrOutputParser()\n",
+    "    |(lambda x: x.split('\\n'))\n",
+    "    \n",
+    ")\n",
+    "\n",
+    "# Testing\n",
+    "# results = generate_queries.invoke({'question':\"what is decomposition in LLM\"})\n",
+    "\n",
+    "def reciprocal_rank_fusion(results:list[list],k=60):\n",
+    "\n",
+    "    fused_score ={}\n",
+    "\n",
+    "    for docs in results:\n",
+    "        for rank,doc in enumerate(docs):\n",
+    "            doc_str = dumps(doc)\n",
+    "            fused_score[doc_str] = fused_score.get(doc_str,0)+1 /(rank+k)\n",
+    "\n",
+    "    reranked_items =[(loads(doc),score) for doc ,score in sorted(fused_score.items(), key=lambda x:x[1],reverse=True)]\n",
+    "    return reranked_items\n",
+    "\n",
+    "retrieval_chain = (generate_queries\n",
+    "                   |retriever.map()\n",
+    "                   |reciprocal_rank_fusion\n",
+    ")\n",
+    "question = \"What is task decomposition for LLM agents?\"\n",
+    "docs = retrieval_chain.invoke({'question':question})\n",
+    "\n",
+    "\n",
+    "template = \"\"\"\n",
+    "Answer the following question based on this context:\n",
+    "\n",
+    "{context}\n",
+    "\n",
+    "Question:{question}\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "fusion_chain = ( {'context':retrieval_chain, 'question':RunnablePassthrough()}\n",
+    "                |prompt\n",
+    "                |llm\n",
+    "                |StrOutputParser()\n",
+    "\n",
+    ")\n",
+    "fusion_chain.invoke(question)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bb472bc",
+   "metadata": {},
+   "source": [
+    "Decomposition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "ac7af1dd",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Decomposition\n",
+    "template = \"\"\"You are a helpful assistant that generates multiple sub-questions related to an input question. \\n\n",
+    "The goal is to break down the input into a set of sub-problems / sub-questions that can be answers in isolation. \\n\n",
+    "Generate multiple search queries related to: {question} \\n\n",
+    "Output (3 queries):\"\"\"\n",
+    "prompt_decomposition = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "generate_queries_decomposition =(\n",
+    "    prompt_decomposition\n",
+    "    |llm\n",
+    "    |StrOutputParser()\n",
+    "    |(lambda x:x.split('\\n'))\n",
+    ")\n",
+    "question = \"What are the main components of an LLM-powered autonomous agent system?\"\n",
+    "questions = generate_queries_decomposition.invoke(question)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11887e21",
+   "metadata": {},
+   "source": [
+    "Answer recursively"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "4fe62571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = \"\"\"\n",
+    "here is the question you need to answer:\n",
+    "\\n --- \\n {question} \\n --- \\n\n",
+    "\n",
+    "Here is any available background question + answer pairs:\n",
+    "\n",
+    "\\n --- \\n {q_a_pairs} \\n --- \\n\n",
+    "\n",
+    "Here is additional context relevant to the question: \n",
+    "\n",
+    "\\n --- \\n {context} \\n --- \\n\n",
+    "\n",
+    "Use the above context and any background question + answer pairs to answer the question: \\n {question}\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "decomposition_prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31fed5f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_qa_pair(question, answer):\n",
+    "    \"\"\"Format Q and A pair\"\"\"\n",
+    "    \n",
+    "    formatted_string = \"\"\n",
+    "    formatted_string += f\"Question: {question}\\nAnswer: {answer}\\n\\n\"\n",
+    "    return formatted_string.strip()\n",
+    "\n",
+    "\n",
+    "q_a_pairs = \"\"\n",
+    "\n",
+    "for q in questions:\n",
+    "    rag_chain =({\n",
+    "        'context': itemgetter('question') |retriever,\n",
+    "        'question': itemgetter('question'),\n",
+    "        'q_a_pairs': itemgetter('q_a_pairs')}\n",
+    "        |decomposition_prompt\n",
+    "        |llm\n",
+    "        |StrOutputParser()\n",
+    "    )\n",
+    "    answer = rag_chain.invoke({'question':q,'q_a_pairs':q_a_pairs})\n",
+    "    answer = rag_chain.invoke({\"question\":q,\"q_a_pairs\":q_a_pairs})\n",
+    "    q_a_pair = format_qa_pair(q,answer)\n",
+    "    q_a_pairs = q_a_pairs + \"\\n---\\n\"+  q_a_pair"
+   ]
   }
  ],
  "metadata": {
