Answering individualy for rag is added

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -606,6 +606,100 @@
     "    q_a_pair = format_qa_pair(q,answer)\n",
     "    q_a_pairs = q_a_pairs + \"\\n---\\n\"+  q_a_pair"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1976a34",
+   "metadata": {},
+   "source": [
+    "Answer individually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eb464be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = \"\"\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. \n",
+    "If you don't know the answer, just say that you don't know. \n",
+    "Use three sentences maximum and keep the answer concise.\n",
+    "\n",
+    "\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"\"\"\n",
+    "\n",
+    "prompt_rag = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "def retrieve_rag_chain(question,prompt,chain):\n",
+    "    sub_questions = chain.invoke(question)\n",
+    "\n",
+    "    rag_results =[]\n",
+    "\n",
+    "    for q in sub_questions:\n",
+    "        retrieved = retriever.get_relevant_documents(q)\n",
+    "        answer =(prompt_rag | llm | StrOutputParser()).invoke({\"context\": retrieved, \n",
+    "                                                                \"question\": q})\n",
+    "        rag_results.append(answer)\n",
+    "        \n",
+    "    return questions,sub_questions\n",
+    "questions,answers = retrieve_rag_chain(question,prompt_rag,generate_queries_decomposition)\n",
+    "\n",
+    "\n",
+    "def format_qa_paris(questions, answers):\n",
+    "\n",
+    "    fromat_strings=''\n",
+    "\n",
+    "    for i, (questions,answers) in enumerate(zip(questions,answers),start=1):\n",
+    "         fromat_strings += f\"Question {i}: {question}\\nAnswer {i}: {answer}\\n\\n\"\n",
+    "    return fromat_strings.strip()  \n",
+    "\n",
+    "question = \"What are the main components of an LLM-powered autonomous agent system?\"\n",
+    "\n",
+    "context = format_qa_paris(questions,answers)\n",
+    "\n",
+    "template = \"\"\"Here is a set of Q+A pairs:\n",
+    "\n",
+    "{context}\n",
+    "\n",
+    "Use these to synthesize an answer to the question: {question}\n",
+    "\"\"\"\n",
+    "prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "\n",
+    "final_rag_chain=(\n",
+    "    prompt\n",
+    "    |llm\n",
+    "    |StrOutputParser()\n",
+    ").invoke({'context':context, 'question':question})\n",
+    "final_rag_chain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffc0bff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Question 1: What are the main components of an LLM-powered autonomous agent system?\\nAnswer 1: In an LLM-powered autonomous agent system, the LLM functions as the agent's brain, with key components like planning, subgoal decomposition, reflection, and refinement working together to handle complex tasks efficiently. The reliability of the natural language interface between LLMs and external components like memory and tools is crucial, as model outputs may have formatting errors or exhibit rebellious behavior. Additionally, the agent can utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\\n\\nQuestion 2: What are the main components of an LLM-powered autonomous agent system?\\nAnswer 2: In an LLM-powered autonomous agent system, the LLM functions as the agent's brain, with key components like planning, subgoal decomposition, reflection, and refinement working together to handle complex tasks efficiently. The reliability of the natural language interface between LLMs and external components like memory and tools is crucial, as model outputs may have formatting errors or exhibit rebellious behavior. Additionally, the agent can utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\\n\\nQuestion 3: What are the main components of an LLM-powered autonomous agent system?\\nAnswer 3: In an LLM-powered autonomous agent system, the LLM functions as the agent's brain, with key components like planning, subgoal decomposition, reflection, and refinement working together to handle complex tasks efficiently. The reliability of the natural language interface between LLMs and external components like memory and tools is crucial, as model outputs may have formatting errors or exhibit rebellious behavior. Additionally, the agent can utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\""
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7997b2fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
