--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -348,7 +348,7 @@
    "id": "36efea2e",
    "metadata": {},
    "source": [
-    "Multi Query"
+    "#### Multi Query"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "id": "c8a549d1",
    "metadata": {},
    "source": [
-    "RAG Fusion"
+    "#### RAG Fusion"
    ]
   },
   {
@@ -513,7 +513,7 @@
    "id": "8bb472bc",
    "metadata": {},
    "source": [
-    "Decomposition"
+    "#### Decomposition"
    ]
   },
   {
@@ -617,10 +617,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "8eb464be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The main components of an LLM-powered autonomous agent system include the LLM acting as the agent's brain, with functions like planning, subgoal decomposition, reflection, and refinement. The natural language interface between the LLM and external components like memory and tools is crucial for reliable communication. The agent can also utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\""
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "template = \"\"\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. \n",
     "If you don't know the answer, just say that you don't know. \n",
@@ -673,25 +684,6 @@
     ").invoke({'context':context, 'question':question})\n",
     "final_rag_chain"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffc0bff2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Question 1: What are the main components of an LLM-powered autonomous agent system?\\nAnswer 1: In an LLM-powered autonomous agent system, the LLM functions as the agent's brain, with key components like planning, subgoal decomposition, reflection, and refinement working together to handle complex tasks efficiently. The reliability of the natural language interface between LLMs and external components like memory and tools is crucial, as model outputs may have formatting errors or exhibit rebellious behavior. Additionally, the agent can utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\\n\\nQuestion 2: What are the main components of an LLM-powered autonomous agent system?\\nAnswer 2: In an LLM-powered autonomous agent system, the LLM functions as the agent's brain, with key components like planning, subgoal decomposition, reflection, and refinement working together to handle complex tasks efficiently. The reliability of the natural language interface between LLMs and external components like memory and tools is crucial, as model outputs may have formatting errors or exhibit rebellious behavior. Additionally, the agent can utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\\n\\nQuestion 3: What are the main components of an LLM-powered autonomous agent system?\\nAnswer 3: In an LLM-powered autonomous agent system, the LLM functions as the agent's brain, with key components like planning, subgoal decomposition, reflection, and refinement working together to handle complex tasks efficiently. The reliability of the natural language interface between LLMs and external components like memory and tools is crucial, as model outputs may have formatting errors or exhibit rebellious behavior. Additionally, the agent can utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\""
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
